Scalfold Departments, move ErrorView to ViewModels

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesMVCContext-44d1a1d6-89dc-48c7-bc1f-4e0e153c5011;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
